methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:14: error: value Yellow is not a member of object java.awt.Color
  faireC(c:Color); setCouleurBrosse(Color.Yellow);
                                          ^